--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,11 +64,15 @@ jobs:
         uses: actions/checkout@v3
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Log into Docker account
+      - name: Build Docker Images
+        run: ./gradlew dockerTag -PbuildVersion=${{ github.ref_name }}
+      - name: Push Docker Images
         run: |
           docker login -u ${{ secrets.DOCKER_HUB_USER }} -p  ${{ secrets.DOCKER_HUB_PASSWORD }}
-      - name: Build and Push Docker Images
-        run: ./gradlew dockerPush -PbuildVersion=${{ github.ref_name }}
+          docker push aaronweikru/inspectit-ocelot-agent:${{ github.ref_name }}
+          docker push aaronweikru/inspectit-ocelot-agent:latest
+          docker push aaronweikru/inspectit-ocelot-configurationserver:${{ github.ref_name }}
+          docker push aaronweikru/inspectit-ocelot-configurationserver:latest
 
   #build_documentation:
   #  name: "Build Release Documentation"
