--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,58 +6,57 @@ on:
       - "[0-9]*.[0-9]*.[0-9]**"
 
 jobs:
+  
+  agent-test:
+    uses: ./.github/workflows/agent_test.yml
 
-  # do we need/want to run tests again? Might be annoying with the randomly failing ones
-  #agent-test:
-  #  uses: ./.github/workflows/agent_test.yml
-#
-  #configdocsgenerator-test:
-  #  uses: ./.github/workflows/configdocsgenerator_test.yml
-#
-  #configurationserver_test:
-  #  uses: ./.github/workflows/configurationserver_test.yml
-#
-  #configuration_ui_test:
-  #  uses: ./.github/workflows/configuration_ui_test.yml
+  configdocsgenerator-test:
+    uses: ./.github/workflows/configdocsgenerator_test.yml
 
-  #build_and_release:
-  #  name: 'Build and Release'
-  #  runs-on: ubuntu-latest
-  #  environment: release
-  #  steps:
-  #    - name: Checkout
-  #      uses: actions/checkout@v3
-  #    - name: Grant execute permission for gradlew
-  #      run: chmod +x gradlew
-  #    - name: Build artifacts
-  #      run: |
-  #        ./gradlew assemble bootJarWithFrontend :inspectit-ocelot-core:cyclonedxBom :inspectit-ocelot-configurationserver:cyclonedxBom -PbuildVersion=${{ github.ref_name }}
-  #        mkdir artifacts
-  #        cp ./inspectit-ocelot-agent/build/inspectit-ocelot-agent-${{ github.ref_name }}.jar ./artifacts
-  #        cp ./components/inspectit-ocelot-configurationserver/build/libs/inspectit-ocelot-configurationserver-${{ github.ref_name }}.jar ./artifacts
-  #        mkdir boms
-  #        cp ./inspectit-ocelot-core/build/reports/bom.json ./boms/inspectit-ocelot-agent-bom.json
-  #        cp ./inspectit-ocelot-core/build/reports/bom.xml ./boms/inspectit-ocelot-agent-bom.xml
-  #        cp ./components/inspectit-ocelot-configurationserver/build/reports/bom.json ./boms/inspectit-ocelot-configurationserver-bom.json
-  #        cp ./components/inspectit-ocelot-configurationserver/build/reports/bom.xml ./boms/inspectit-ocelot-configurationserver-bom.xml
-  #        zip -r ./artifacts/software-bill-of-materials.zip ./boms
-  #    - name: Calculate checksums of release artifacts
-  #      working-directory: ./artifacts
-  #      run: for f in *; do sha256sum "$f" >> inspectit-ocelot-sha256-checksums.txt; done
-  #    - name: Create Release
-  #      uses: softprops/action-gh-release@v0.1.14
-  #      with:
-  #        tag_name: ${{ github.event.inputs.boomerang-version }}
-  #        files: artifacts/*
-  #        generate_release_notes: true
-  #        name: Version ${{ github.ref_name }}
-  #        body: "You can also find the corresponding documentation online under the following link: [inspectIT Ocelot Documentation](http://docs.inspectit.rocks)"
+  configurationserver_test:
+    uses: ./.github/workflows/configurationserver_test.yml
+
+  configuration_ui_test:
+    uses: ./.github/workflows/configuration_ui_test.yml
+
+  build_and_release:
+    name: 'Build and Release'
+    runs-on: ubuntu-latest
+    environment: release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build artifacts
+        run: |
+          ./gradlew assemble bootJarWithFrontend :inspectit-ocelot-core:cyclonedxBom :inspectit-ocelot-configurationserver:cyclonedxBom -PbuildVersion=${{ github.ref_name }}
+          mkdir artifacts
+          cp ./inspectit-ocelot-agent/build/inspectit-ocelot-agent-${{ github.ref_name }}.jar ./artifacts
+          cp ./components/inspectit-ocelot-configurationserver/build/libs/inspectit-ocelot-configurationserver-${{ github.ref_name }}.jar ./artifacts
+          mkdir boms
+          cp ./inspectit-ocelot-core/build/reports/bom.json ./boms/inspectit-ocelot-agent-bom.json
+          cp ./inspectit-ocelot-core/build/reports/bom.xml ./boms/inspectit-ocelot-agent-bom.xml
+          cp ./components/inspectit-ocelot-configurationserver/build/reports/bom.json ./boms/inspectit-ocelot-configurationserver-bom.json
+          cp ./components/inspectit-ocelot-configurationserver/build/reports/bom.xml ./boms/inspectit-ocelot-configurationserver-bom.xml
+          zip -r ./artifacts/software-bill-of-materials.zip ./boms
+      - name: Calculate checksums of release artifacts
+        working-directory: ./artifacts
+        run: for f in *; do sha256sum "$f" >> inspectit-ocelot-sha256-checksums.txt; done
+      - name: Create Release
+        uses: softprops/action-gh-release@v0.1.14
+        with:
+          tag_name: ${{ github.event.inputs.boomerang-version }}
+          files: artifacts/*
+          generate_release_notes: true
+          name: Version ${{ github.ref_name }}
+          body: "You can also find the corresponding documentation online under the following link: [inspectIT Ocelot Documentation](http://docs.inspectit.rocks)"
 
 
   build_and_publish_docker_images:
     name: 'Build and Push Docker Images'
     runs-on: ubuntu-latest
-    #needs: build_and_release
+    needs: build_and_release
     environment: release
     steps:
       - name: Checkout
@@ -74,37 +73,37 @@ jobs:
           docker push aaronweikru/inspectit-ocelot-configurationserver:${{ github.ref_name }}
           docker push aaronweikru/inspectit-ocelot-configurationserver:latest
 
-  #build_documentation:
-  #  name: "Build Release Documentation"
-  #  runs-on: ubuntu-latest
-  #  needs: build_and_release
-  #  steps:
-  #    - name: Checkout
-  #      uses: actions/checkout@v3
-  #    - name: Setup Node.js
-  #      uses: actions/setup-node@v2
-  #      with:
-  #        node-version: 18
-  #    - name: Replace Variables in Docs
-  #      working-directory: ./inspectit-ocelot-documentation/docs
-  #      run: |
-  #        find . -type f -print0 | xargs -0 sed -i 's/{inspectit-ocelot-version}/'"${{ github.ref_name }}"'/g'
-  #        OPEN_CENSUS_VERSION=$(cat ../../gradle.properties | grep -oP '(?<=openCensusVersion=).*')
-  #        find . -type f -print0 | xargs -0 sed -i 's/{opencensus-version}/'"${OPEN_CENSUS_VERSION}"'/g'
-  #    - name: Create and Publish new Documentation Version
-  #      working-directory: ./inspectit-ocelot-documentation/website
-  #      run: |
-  #        npm install
-  #        npm run version ${{ github.ref_name }}
-  #        git add versions.json versioned_docs versioned_sidebars
-  #        git config --global user.name 'NTTechnicalUser'
-  #        git config --global user.email 'NTTechnicalUser@users.noreply.github.com'
-  #        git commit -m "Publish documentation ${{ github.ref_name }}"
-  #        git push origin HEAD:master
-#
-  #publish_release_documentation:
-  #  name: "Publish Release Documentation"
-  #  needs: build_documentation
-  #  uses: ./.github/workflows/deploy_docs.yml
-  #  with:
-  #    commit-message: Publish documentation for ${{ github.ref_name }}
+  build_documentation:
+    name: "Build Release Documentation"
+    runs-on: ubuntu-latest
+    needs: build_and_release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18
+      - name: Replace Variables in Docs
+        working-directory: ./inspectit-ocelot-documentation/docs
+        run: |
+          find . -type f -print0 | xargs -0 sed -i 's/{inspectit-ocelot-version}/'"${{ github.ref_name }}"'/g'
+          OPEN_CENSUS_VERSION=$(cat ../../gradle.properties | grep -oP '(?<=openCensusVersion=).*')
+          find . -type f -print0 | xargs -0 sed -i 's/{opencensus-version}/'"${OPEN_CENSUS_VERSION}"'/g'
+      - name: Create and Publish new Documentation Version
+        working-directory: ./inspectit-ocelot-documentation/website
+        run: |
+          npm install
+          npm run version ${{ github.ref_name }}
+          git add versions.json versioned_docs versioned_sidebars
+          git config --global user.name 'NTTechnicalUser'
+          git config --global user.email 'NTTechnicalUser@users.noreply.github.com'
+          git commit -m "Publish documentation ${{ github.ref_name }}"
+          git push origin HEAD:master
+
+  publish_release_documentation:
+    name: "Publish Release Documentation"
+    needs: build_documentation
+    uses: ./.github/workflows/deploy_docs.yml
+    with:
+      commit-message: Publish documentation for ${{ github.ref_name }}
