--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,18 +6,18 @@ on:
       - "[0-9]*.[0-9]*.[0-9]**"
 
 jobs:
+  
+  agent-test:
+    uses: ./.github/workflows/agent_test.yml
 
-  #agent-test:
-  #  uses: ./.github/workflows/agent_test.yml
-#
-  #configdocsgenerator-test:
-  #  uses: ./.github/workflows/configdocsgenerator_test.yml
-#
-  #configurationserver_test:
-  #  uses: ./.github/workflows/configurationserver_test.yml
-#
-  #configuration_ui_test:
-  #  uses: ./.github/workflows/configuration_ui_test.yml
+  configdocsgenerator-test:
+    uses: ./.github/workflows/configdocsgenerator_test.yml
+
+  configurationserver_test:
+    uses: ./.github/workflows/configurationserver_test.yml
+
+  configuration_ui_test:
+    uses: ./.github/workflows/configuration_ui_test.yml
 
   build_and_release:
     name: 'Build and Release'
