--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,11 +6,11 @@ on:
       - "[0-9]*.[0-9]*.[0-9]**"
 
 jobs:
-  
-  agent-test:
+
+  agent_test:
     uses: ./.github/workflows/agent_test.yml
 
-  configdocsgenerator-test:
+  configdocsgenerator_test:
     uses: ./.github/workflows/configdocsgenerator_test.yml
 
   configurationserver_test:
@@ -23,6 +23,7 @@ jobs:
     name: 'Build and Release'
     runs-on: ubuntu-latest
     environment: release
+    needs: [agent_test, configdocsgenerator_test, configurationserver_test, configuration_ui_test]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
