--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,7 +75,7 @@ jobs:
           docker push aaronweikru/inspectit-ocelot-configurationserver:latest
 
   build_documentation:
-    name: "Build Release Documentation"
+    name: "Build and Publish Release Documentation"
     runs-on: ubuntu-latest
     needs: build_and_release
     steps:
@@ -85,26 +85,32 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 18
+          cache: yarn
+          cache-dependency-path: 'inspectit-ocelot-documentation/website/yarn.lock'
       - name: Replace Variables in Docs
         working-directory: ./inspectit-ocelot-documentation/docs
         run: |
           find . -type f -print0 | xargs -0 sed -i 's/{inspectit-ocelot-version}/'"${{ github.ref_name }}"'/g'
           OPEN_CENSUS_VERSION=$(cat ../../gradle.properties | grep -oP '(?<=openCensusVersion=).*')
           find . -type f -print0 | xargs -0 sed -i 's/{opencensus-version}/'"${OPEN_CENSUS_VERSION}"'/g'
-      - name: Create and Publish new Documentation Version
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      - name: Create new Documentation Version
         working-directory: ./inspectit-ocelot-documentation/website
         run: |
-          npm install
           npm run version ${{ github.ref_name }}
           git add versions.json versioned_docs versioned_sidebars
           git config --global user.name 'NTTechnicalUser'
           git config --global user.email 'NTTechnicalUser@users.noreply.github.com'
-          git commit -m "Publish documentation ${{ github.ref_name }}"
+          git commit -m "Publish documentation for release ${{ github.ref_name }}"
           git push origin HEAD:master
-
-  publish_release_documentation:
-    name: "Publish Release Documentation"
-    needs: build_documentation
-    uses: ./.github/workflows/deploy_docs.yml
-    with:
-      commit-message: Publish documentation for ${{ github.ref_name }}
+      - name: Build website
+        run: yarn build
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./inspectit-ocelot-documentation/website/build/inspectit-ocelot
+          user_name: NTTechnicalUser
+          user_email: NTTechnicalUser@users.noreply.github.com
+          commit_message: Publish documentation for release ${{ github.ref_name }}
