--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,7 +77,7 @@ jobs:
   build_documentation:
     name: "Build and Publish Release Documentation"
     runs-on: ubuntu-latest
-    needs: build_and_release
+    #needs: build_and_release
     steps:
       - name: Checkout
         uses: actions/checkout@v3
