--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,6 +98,7 @@ jobs:
       - name: Create new Documentation Version
         working-directory: ./inspectit-ocelot-documentation/website
         run: |
+          npm install
           npm run version ${{ github.ref_name }}
           git add versions.json versioned_docs versioned_sidebars
           git config --global user.name 'NTTechnicalUser'
