--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,6 +77,9 @@ jobs:
   build_documentation:
     name: "Build and Publish Release Documentation"
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: inspectit-ocelot-documentation/website
     #needs: build_and_release
     steps:
       - name: Checkout
@@ -93,10 +96,7 @@ jobs:
           find . -type f -print0 | xargs -0 sed -i 's/{inspectit-ocelot-version}/'"${{ github.ref_name }}"'/g'
           OPEN_CENSUS_VERSION=$(cat ../../gradle.properties | grep -oP '(?<=openCensusVersion=).*')
           find . -type f -print0 | xargs -0 sed -i 's/{opencensus-version}/'"${OPEN_CENSUS_VERSION}"'/g'
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
       - name: Create new Documentation Version
-        working-directory: ./inspectit-ocelot-documentation/website
         run: |
           npm install
           npm run version ${{ github.ref_name }}
@@ -105,6 +105,8 @@ jobs:
           git config --global user.email 'NTTechnicalUser@users.noreply.github.com'
           git commit -m "Publish documentation for release ${{ github.ref_name }}"
           git push origin HEAD:master
+      - name: Install Build Dependencies
+        run: yarn install --frozen-lockfile
       - name: Build website
         run: yarn build
       - name: Deploy to GitHub Pages
