--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,7 +107,7 @@ jobs:
           git push origin HEAD:master
       - name: Install Build Dependencies
         run: yarn install --frozen-lockfile
-      - name: Build website
+      - name: Build Website
         run: yarn build
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
